@@ -4,7 +4,6 @@ import java.awt.Dimension;
 import java.io.IOException;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -19,7 +18,9 @@ import be.cytomine.appengine.dto.inputs.task.types.image.ImageTypeConstraint;
 import be.cytomine.appengine.dto.inputs.task.types.image.ImageValue;
 import be.cytomine.appengine.dto.responses.errors.ErrorCode;
 import be.cytomine.appengine.exceptions.TypeValidationException;
-import be.cytomine.appengine.handlers.FileData;
+import be.cytomine.appengine.handlers.StorageData;
+import be.cytomine.appengine.handlers.StorageDataEntry;
+import be.cytomine.appengine.handlers.StorageDataType;
 import be.cytomine.appengine.models.task.Output;
 import be.cytomine.appengine.models.task.ParameterType;
 import be.cytomine.appengine.models.task.Run;
@@ -79,7 +80,7 @@ public class ImageType extends Type {
         List<FileFormat> checkers = formats
             .stream()
             .map(ImageFormatFactory::getFormat)
-            .collect(Collectors.toList());
+            .toList();
 
         this.format = checkers
             .stream()
@@ -167,7 +168,7 @@ public class ImageType extends Type {
     }
 
     @Override
-    public void persistResult(Run run, Output currentOutput, String outputValue) {
+    public void persistResult(Run run, Output currentOutput, StorageData outputValue) {
         ImagePersistenceRepository imagePersistenceRepository = AppEngineApplicationContext.getBean(ImagePersistenceRepository.class);
         ImagePersistence result = imagePersistenceRepository.findImagePersistenceByParameterNameAndRunIdAndParameterType(currentOutput.getName(), run.getId(), ParameterType.OUTPUT);
         if (result != null) {
@@ -183,7 +184,7 @@ public class ImageType extends Type {
     }
 
     @Override
-    public FileData mapToStorageFileData(JsonNode provision, String charset) {
+    public StorageData mapToStorageFileData(JsonNode provision) {
         String parameterName = provision.get("param_name").asText();
         byte[] inputFileData = null;
         try {
@@ -191,7 +192,8 @@ public class ImageType extends Type {
         } catch (IOException e) {
             e.printStackTrace();
         }
-        return new FileData(inputFileData, parameterName);
+        StorageDataEntry storageDataEntry = new StorageDataEntry(inputFileData, parameterName, StorageDataType.FILE);
+        return new StorageData(storageDataEntry);
     }
 
     @Override
@@ -204,7 +206,7 @@ public class ImageType extends Type {
     }
 
     @Override
-    public ImageValue buildTaskRunParameterValue(String output, UUID id, String outputName) {
+    public ImageValue buildTaskRunParameterValue(StorageData output, UUID id, String outputName) {
         ImageValue imageValue = new ImageValue();
         imageValue.setParameterName(outputName);
         imageValue.setTaskRunId(id);
